--- a/styles/potfolio.css
+++ b/styles/potfolio.css
@@ -23,10 +23,15 @@
     border-radius: 5px;
     font-size: 20px;
     font-weight: bold;
-    color: #FFF8F3;
+    color: white;
+    cursor: pointer;
 }
+/* main style */
 header{
     background-color: #FFF8F3;
+    background: url('../images/developer.png'),url('../images/header_bg.png'),#FFF8F3;
+    background-position: top left,bottom right;
+    background-repeat: no-repeat;
     padding: 50px;
 }
 nav{
@@ -51,4 +56,39 @@ nav .menu a{
     color:#474747;
     text-decoration: none;
 
+}
+#banner
+{
+    /* border: 1px solid red; */
+    margin: 47px 38px 0px 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#banner .baner-contant{
+    width: 585px;
+}
+#banner .baner-contant h2 {
+    font-size: 45px;
+    font-weight: 600; 
+    color:#474747;
+    margin-bottom: 5px;
+
+}
+#banner .baner-contant h1{
+    font-size: 85px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+}
+#banner .baner-contant p{
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+    margin-bottom: 30px;
+
+}
+#banner .banner-image{
+    max-width: 585px;
+    vertical-align: middle;
 }
