--- a/styles/potfolio.css
+++ b/styles/potfolio.css
@@ -114,7 +114,7 @@ nav .menu a{
     max-width: 585px;
     vertical-align: middle;
 }
-#about
+#about,#skills,#resume
 {
     padding-top: 130px;
 
@@ -146,10 +146,7 @@ nav .menu a{
     font-size: 20px;
 
 }
-#skills
-{
-    padding-top: 130px;
-}
+
 #skills .skills-container{
     width:71%;
     max-width: 1140px;
@@ -163,7 +160,7 @@ nav .menu a{
  .skill-box .skill-card{
     padding: 30px;
     max-width: 267px;
-    box-shadow: 0 6px 50px 0 #0000005b;
+    box-shadow: 0 6px 50px 0#000000;
 
     border: 1px solid red;
  }
@@ -180,5 +177,49 @@ nav .menu a{
     font-size: 16px;
     color: #757575;
     line-height: 28px;
+
+  }
+ #resume .resume-container{
+    width: 71%;
+    max-width: 1140px;
+    margin:113px auto 0;
+    display: flex;
+    gap:24px;
+
+  }
+  .resume-container hr{
+    margin:30px 0;
+  }
+  .resume-container .section-title{
+    color: #474747;
+    font-size: 30px;
+    margin-bottom: 30px;
+
+  }
+  .resume-card{
+    max-width: 511px;
+    margin-right: 47px;
+  }
+  .resume-card .card-title{
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color:#474747
+
+  }
+  .resume-card .card-title .card-info
+  {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color:#757575;
+
+  }
+  .resume-card .card-title .card-text
+  {
+    font-size: 16px;
+    line-height: 28px;
+    margin-bottom: 20px;
+    color:#757575;
 
   }
