responsive for phone

--- a/styles/potfolio.css
+++ b/styles/potfolio.css
@@ -31,6 +31,12 @@
     cursor: pointer;
 }
 
+.btn-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
 .section-heading {
     max-width: 827px;
     text-align: center;
@@ -288,12 +294,111 @@ footer .footer-container h2 {
     margin-right: 24px;
 
 }
-.footer-container form input[type="text"],.footer-container form  {
+
+.footer-container form input[type="text"],
+.footer-container form {
     width: 461px;
     padding: 18px 31px;
     margin-bottom: 24px;
     border: none;
     border-radius: 5px;
-    color:#757575;
+    color: #757575;
 
 }
+
+.hide {
+    display: none !important;
+}
+
+@media screen and (max-width:576px) {
+    .container {
+        width: 95%;
+    }
+
+    .section-heading h2 {
+        font-size: 30px;
+
+    }
+
+    .btn-group {
+        justify-content: center;
+    }
+
+    header {
+        background-color: #FFF8F3;
+        background: url(../images/header_bg.png), #FFF8F3;
+        
+        background-repeat: no-repeat;
+    }
+
+        nav {
+            gap: 20px
+        }
+
+        nav .menu {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        #banner {
+            margin: 20px;
+            gap: 20px;
+            text-align: center;
+        }
+
+        #banner .banner-image img {
+            width: 100%;
+        }
+
+        #banner .baner-contant h1 {
+            font-size: 44px;
+        }
+
+       
+
+
+        #about,
+        #skills,
+        #resume {
+            padding-top: 60px;
+
+        }
+         #about .about-container {
+            padding: 20px;
+        }
+
+
+        #about .about-container .about-info {
+            gap: 40px;
+        }
+
+        #skills .skills-container .skill-box,
+        #about .about-container .about-info,
+        footer .footer-container,
+        #resume .resume-container,
+        nav,
+        #banner {
+            flex-direction: column;
+        }
+
+        .skill-box .skill-card {
+            max-width: 100%;
+        }
+
+        #resume .resume-container {
+            margin-top: 60px;
+        }
+
+        .resume-card {
+            margin-right: 10px;
+        }
+
+
+        .footer-container form input[type="text"],
+        .footer-container form {
+            width: 100%;
+
+        }
+
+
+    }
